fixed constructor code editor jumping after initialization

--- a/src/assets/admin/components/code-editor/editor.scss
+++ b/src/assets/admin/components/code-editor/editor.scss
@@ -1,8 +1,17 @@
 @import "../../variables";
 
 .lazyblocks-component-code-editor {
+    // fix editor height jumping after init
+    min-height: 117px;
     border: 1px solid $color_gray;
     border-radius: $radius_large;
+
+    // fix editor height jumping after init
+    .ace_text-input,
+    .ace_gutter-cell,
+    .ace_gutter-active-line {
+        min-height: 17px;
+    }
 
     &.ace_editor {
         width: 100%;
